Hooking up the ChangeFeedEventHost with the SignalR Hub

--- a/updateprocessor/wwwroot/index.html
+++ b/updateprocessor/wwwroot/index.html
@@ -42,6 +42,10 @@
             appendMessage(sender + ': ' + message);
         });
 
+        connection.on("Changes", function (data) {
+            appendMessage(data);
+        });
+
         connection.on("SendAction", function (sender, action) {
             appendMessage(sender + ' ' + action);
         });
