--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="node_modules/knockout/build/output/knockout-latest.js"></script>
     <script type="text/javascript" src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
+    <script type="text/javascript" src="built/main.js"></script>
     <script type="text/javascript" src="built/canvas.js"></script>
+    <script type="text/javascript" src="built/updateClient.js"></script>
 
 </head>
 
