--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="built/main.js"></script>
     <script type="text/javascript" src="built/canvas.js"></script>
     <script type="text/javascript" src="built/updateClient.js"></script>
+    <script type="text/javascript" src="built/drawingBuffer.js"></script>
 
 </head>
 
