--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/canvas.css" type="text/css" charset="UTF-8" />
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+
     <script type="text/javascript" src="node_modules/knockout/build/output/knockout-latest.js"></script>
+    <script type="text/javascript" src="node_modules/signalr/jquery.signalR.min.js"></script>
     <script type="text/javascript" src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
     <script type="text/javascript" src="node_modules/jquery.mousewheel/jquery.mousewheel.js"></script>
     <script type="text/javascript" src="built/main.js"></script>
