Switch to latest version of signalR (not jquery plugin)

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 
     <script type="text/javascript" src="node_modules/knockout/build/output/knockout-latest.js"></script>
-    <script type="text/javascript" src="node_modules/signalr/jquery.signalR.min.js"></script>
+    <script type="text/javascript" src="node_modules/@aspnet/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript" src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
     <script type="text/javascript" src="node_modules/jquery.mousewheel/jquery.mousewheel.js"></script>
     <script type="text/javascript" src="built/main.js"></script>
