add environment handling support to client

--- a/client/index.html
+++ b/client/index.html
@@ -10,10 +10,11 @@
     <script type="text/javascript" src="node_modules/@aspnet/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript" src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
     <script type="text/javascript" src="node_modules/jquery.mousewheel/jquery.mousewheel.js"></script>
-    <script type="text/javascript" src="built/main.js"></script>
+    <!--<script type="text/javascript" src="built/main.js"></script>
     <script type="text/javascript" src="built/canvas.js"></script>
     <script type="text/javascript" src="built/updateClient.js"></script>
-    <script type="text/javascript" src="built/drawingBuffer.js"></script>
+    <script type="text/javascript" src="built/drawingBuffer.js"></script>-->
+    <script type="text/javascript" src="dist/bundle.js"></script>
 
 </head>
 
