--- a/client/index.html
+++ b/client/index.html
@@ -19,26 +19,25 @@
         <div class="text-container">
             <div class="title">Azure Cosmos DB <strong>PxDRAW</strong></div>
             <p class="description">Welcome to Azure Cosmos DB PxDRAW! PxDRAW is a collaborative project. Pick a color on the left and draw on the canvas, one pixel a time.</p>
-            <div class="tweet-area">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #LoveCosmosDB</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-        </div>
-        <div class="coordinates-container">
-            <div>Current Px</div>
-            <div data-bind="text: currentPositionStr"></div>
         </div>
         <div class="timer-container">
-            <div>Draw pixel in</div>
+            <div>Draw pixel at</div>
             <div>00:00</div>
         </div>
     </div>
     <div class="main-area">
-        <div class="palette-container" data-bind="foreach: availableColors">
-            <div class="palette-button" data-bind="style: { backgroundColor: $parent.toRGBA($index()) }, css: { selected: $parent.selectedColorIndex() === $index() }, click: $parent.selectColorIndex.bind($parent, $index())"></div>
+        <div class="palette-container">
+            <div data-bind="foreach: availableColors">
+                <div class="palette-button" data-bind="style: { backgroundColor: $parent.toRGBA($index()) }, css: { selected: $parent.selectedColorIndex() === $index() }, click: $parent.selectColorIndex.bind($parent, $index())"></div>
+            </div>
         </div>
         <div id="canvas-container">
             <canvas id="canvas" width="1000" height="1000"></canvas>
+            <div class="coordinates-container" data-bind="text: currentPositionStr"></div>
+            <div class="tweet-area">
+                <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-show-count="false">Tweet #LoveCosmosDB</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
     </div>
 </body>
