--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="node_modules/jquery-ui-dist/jquery-ui.min.css" type="text/css" charset="UTF-8" />
     <link rel="stylesheet" href="css/canvas.css" type="text/css" charset="UTF-8" />
-    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
     <script type="text/javascript" src="node_modules/knockout/build/output/knockout-latest.js"></script>
     <script type="text/javascript" src="node_modules/@aspnet/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript" src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
@@ -31,13 +33,13 @@
     </div>
     <div class="main-area">
         <div class="palette-container">
-            <div data-bind="foreach: availableColors">
-                <div class="palette-button" data-bind="style: { backgroundColor: $parent.toRGBA($index()) }, css: { selected: $parent.selectedColorIndex() === $index() }, click: $parent.selectColorIndex.bind($parent, $index())"></div>
+            <div data-bind="foreach: canvas.availableColors">
+                <div class="palette-button" data-bind="style: { backgroundColor: $parent.canvas.toRGBA($index()) }, css: { selected: $parent.canvas.selectedColorIndex() === $index() }, click: $parent.canvas.selectColorIndex.bind($parent.canvas, $index())"></div>
             </div>
         </div>
         <div id="canvas-container">
             <canvas id="canvas" width="1000" height="1000"></canvas>
-            <div class="coordinates-container" data-bind="text: currentPositionStr, visible: currentPositionStr"></div>
+            <div id="coordinates-container" data-bind="text: canvas.currentPositionStr, visible: canvas.currentPositionStr"></div>
             <div class="tweet-area">
                 <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-show-count="false">Tweet #LoveCosmosDB</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
