--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="header">
-        <img src="img/CosmosDB_color.png">
+        <img src="img/CosmosDB_rgb_ui_darktheme.svg">
         <div class="text-container">
             <div class="title">Azure Cosmos DB <strong>PxDRAW</strong></div>
             <p class="description">Welcome to Azure Cosmos DB PxDRAW! PxDRAW is a collaborative project. Pick a color on the left and draw on the canvas, one pixel a time.</p>
