--- a/client/index.html
+++ b/client/index.html
@@ -3,19 +3,16 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="node_modules/jquery-ui-dist/jquery-ui.min.css" type="text/css" charset="UTF-8" />
     <link rel="stylesheet" href="css/canvas.css" type="text/css" charset="UTF-8" />
-    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
 
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
     <script type="text/javascript" src="node_modules/knockout/build/output/knockout-latest.js"></script>
     <script type="text/javascript" src="node_modules/@aspnet/signalr/dist/browser/signalr.js"></script>
     <script type="text/javascript" src="node_modules/jquery.panzoom/dist/jquery.panzoom.min.js"></script>
     <script type="text/javascript" src="node_modules/jquery.mousewheel/jquery.mousewheel.js"></script>
-    <!--<script type="text/javascript" src="built/main.js"></script>
-    <script type="text/javascript" src="built/canvas.js"></script>
-    <script type="text/javascript" src="built/updateClient.js"></script>
-    <script type="text/javascript" src="built/drawingBuffer.js"></script>-->
     <script type="text/javascript" src="dist/bundle.js"></script>
-
 </head>
 
 <body>
@@ -24,31 +21,31 @@
         <div class="text-container">
             <div class="title">Azure Cosmos DB <strong>PxDRAW</strong></div>
             <p class="description">Welcome to Azure Cosmos DB PxDRAW! PxDRAW is a collaborative project. Pick a color on the left and draw on the canvas, one pixel a time.</p>
-            <div class="tweet-area">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #LoveCosmosDB</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
+        </div>
+        <div class="header-block-container">
+            <div class="header-block-title">Draw pixel in</div>
+            <div class="header-block-main">00:00</div>
+        </div>
+        <div class="header-block-container">
+            <div class="header-block-title">Done drawing!</div>
+            <div class="header-block-main"><a href>Log out</a></div>
         </div>
     </div>
     <div class="main-area">
         <div class="palette-container">
-            <div data-bind="foreach: availableColors">
-                <div class="palette-button" data-bind="style: { backgroundColor: $parent.toRGBA($index()) }, css: { selected: $parent.selectedColorIndex() === $index() }, click: $parent.selectColorIndex.bind($parent, $index())"></div>
+            <div data-bind="foreach: canvas.availableColors">
+                <div class="palette-button" data-bind="style: { backgroundColor: $parent.canvas.toRGBA($index()) }, css: { selected: $parent.canvas.selectedColorIndex() === $index() }, click: $parent.canvas.selectColorIndex.bind($parent.canvas, $index())"></div>
             </div>
-
-            <div data-bind="text: currentPositionStr"></div>
         </div>
         <div id="canvas-container">
             <canvas id="canvas" width="1000" height="1000"></canvas>
+            <div id="coordinates-container" data-bind="text: canvas.currentPositionStr, visible: canvas.currentPositionStr"></div>
+            <div class="tweet-area">
+                <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-show-count="false">Tweet #LoveCosmosDB</a>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
     </div>
-    <div>
-        <button data-bind="event:{ mousedown:scrollUpStart, mouseup:scrollStop, touchstart:scrollUpStart, touchend:scrollStop }">Move Up</button>
-        <button data-bind="event:{ mousedown:scrollDownStart, mouseup:scrollStop, touchstart:scrollDownStart, touchend:scrollStop }">Move Down</button>
-        <button data-bind="event:{ mousedown:scrollLeftStart, mouseup:scrollStop, touchstart:scrollLeftStart, touchend:scrollStop }">Move Left</button>
-        <button data-bind="event:{ mousedown:scrollRightStart, mouseup:scrollStop, touchstart:scrollRightStart, touchend:scrollStop }">Move Right</button>
-    </div>
-
 </body>
 
 </html>
