login/logout works

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -37,10 +37,16 @@
             <div class="header-block-title">Draw pixel in</div>
             <div class="header-block-main">00:00</div>
         </div>
-        <div class="header-block-container">
+        <div id="pxdraw-logout-block" class="header-block-container hidden">
             <div class="header-block-title">Done drawing!</div>
             <div class="header-block-main">
-                <a href>Log out</a>
+                <a id="pxdraw-logout" href>Log out</a>
+            </div>
+        </div>
+        <div id="pxdraw-login-block" class="header-block-container">
+            <div class="header-block-title">Do you want to draw?</div>
+            <div class="header-block-main">
+                <a id="pxdraw-login" href>Log in</a>
             </div>
         </div>
     </div>
