Change logged in show/hide logic into Knockout. Wire user logged in/not logged in, admin/not admin to drawing mode.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -37,16 +37,16 @@
             <div class="header-block-title">Draw pixel in</div>
             <div class="header-block-main">00:00</div>
         </div>
-        <div id="pxdraw-logout-block" class="header-block-container hidden">
+        <div class="header-block-container" data-bind="visible:isLoggedIn()">
             <div class="header-block-title">Done drawing!</div>
             <div class="header-block-main">
-                <a id="pxdraw-logout" href>Log out</a>
+                <a data-bind="attr: { href: logoutUrl }">Log out</a>
             </div>
         </div>
-        <div id="pxdraw-login-block" class="header-block-container">
+        <div class="header-block-container" data-bind="visible:!isLoggedIn()">
             <div class="header-block-title">Do you want to draw?</div>
             <div class="header-block-main">
-                <a id="pxdraw-login" href>Log in</a>
+                <a data-bind="attr: { href: loginUrl }">Log in</a>
             </div>
         </div>
     </div>
@@ -55,6 +55,7 @@
             <div data-bind="foreach: canvas.availableColors">
                 <div class="palette-button" data-bind="style: { backgroundColor: $parent.canvas.toRGBA($index()) }, css: { selected: $parent.canvas.selectedColorIndex() === $index() }, click: $parent.canvas.selectColorIndex.bind($parent.canvas, $index())"></div>
             </div>
+            <input type="checkbox" data-bind="visible:isAdmin, checked: isFreehandDrawing" />
         </div>
         <div id="canvas-container">
             <canvas id="canvas" width="1000" height="1000"></canvas>
