--- a/client/src/index.html
+++ b/client/src/index.html
@@ -33,7 +33,7 @@
             <div class="description">Welcome to Azure Cosmos DB PxDRAW! PxDRAW is a collaborative project. Pick a color on the left and draw on the
                 canvas, one pixel a time.</div>
         </div>
-        <div class="header-block-container" data-bind="visible:isLoggedIn()">
+        <div class="header-block-container" style="display:none" data-bind="visible:isLoggedIn()">
             <div class="header-block-title">Draw pixel</div>
             <div class="header-block-main" data-bind="text: remainingTimeDisplay, css: { highlight: isNow() }"></div>
         </div>
