--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>PxDraw - Microsoft</title>
     <link rel="stylesheet" href="node_modules/jquery-ui-dist/jquery-ui.min.css" type="text/css" charset="UTF-8" />
     <link rel="stylesheet" href="css/canvas.css" type="text/css" charset="UTF-8" />
     <script type="text/javascript">
@@ -59,6 +60,7 @@
         </div>
         <div id="canvas-container">
             <canvas id="canvas" width="1000" height="1000"></canvas>
+            <canvas id="viewport-canvas"></canvas>
             <div id="coordinates-container" data-bind="text: canvas.currentPositionStr, visible: canvas.currentPositionStr"></div>
             <div class="tweet-area">
                 <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button"
