Change hashtag to #CosmosDB

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -63,8 +63,8 @@
             <canvas id="viewport-canvas"></canvas>
             <div id="coordinates-container" data-bind="text: canvas.currentPositionStr, visible: canvas.currentPositionStr"></div>
             <div class="tweet-area">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=LoveCosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button"
-                    data-size="large" data-show-count="false">Tweet #LoveCosmosDB</a>
+                <a href="https://twitter.com/intent/tweet?button_hashtag=CosmosDB&ref_src=twsrc%5Etfw" class="twitter-hashtag-button"
+                    data-size="large" data-show-count="false">Tweet #CosmosDB</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
