Display little rectangle next to cursor with selected color. Highlight current pixel on mouse move

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -70,6 +70,7 @@
             </div>
         </div>
     </div>
+    <div id="cursor-friend" data-bind="style: { backgroundColor: canvas.toRGBA(canvas.selectedColorIndex()) }, css: { cursorbordered: canvas.selectedColorIndex() === 3 }"></div>
 </body>
 
 </html>
