Change config to be driven via webpack
Important note: this stops the sniffing of the window.location to discover which endpoint to talk to

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -29,7 +29,7 @@
     <div class="header">
         <img src="img/CosmosDB_rgb_ui_darktheme.svg">
         <div class="header-block-container text-container">
-            <div class="title">Azure Cosmos DB
+            <div class="title">Azure Cosmos DB<%= REGION %>
                 <strong>PxDRAW</strong>
             </div>
             <div class="description">Welcome to Azure Cosmos DB PxDRAW! PxDRAW is a collaborative project. Pick a color on the left and draw on the
