--- a/client/src/index.html
+++ b/client/src/index.html
@@ -29,8 +29,9 @@
     <div class="header">
         <img src="img/CosmosDB_rgb_ui_darktheme.svg">
         <div class="header-block-container text-container">
-            <div class="title">Azure Cosmos DB<%= REGION %>
+            <div class="title">Azure Cosmos DB
                 <strong>PxDRAW</strong>
+                <%= REGION %>
             </div>
             <div class="description">Welcome to Azure Cosmos DB PxDRAW! PxDRAW is a collaborative project. Pick a color on the left and draw on the
                 canvas, one pixel a time.</div>
