--- a/client/src/index.html
+++ b/client/src/index.html
@@ -69,11 +69,11 @@
             </div>
         </div>
         <div class="tweets-container" style="display:none" data-bind="visible: isTrendingTweetsEnabled">
-            <div class="tweet-area2">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=CosmosDB&ref_src=twsrc%5Etfw&text=Drawing%20%23%3Cuse%20a%20hashtag%20to%20describe%20your%20effort%3E%20with%20love%20on&hashtags=Azure,PxDraw" class="twitter-hashtag-button"
-                    data-size="large" data-show-count="false">Tweet #CosmosDB</a>
+            <div class="top-line">
+                <div class="title">Trending Tweets</div>
+                <a href="https://twitter.com/intent/tweet?button_hashtag=CosmosDB&ref_src=twsrc%5Etfw&text=Drawing%20%23%3Cuse%20a%20hashtag%20to%20describe%20your%20effort%3E%20with%20love%20on&hashtags=Azure,PxDraw"
+                    class="twitter-hashtag-button" data-size="large" data-show-count="false">Tweet #CosmosDB</a>
             </div>
-            <div class="title">Trending Tweets</div>
             <div id="tweets"></div>
         </div>
     </div>
