Add thumbnail and show visible viewport (#55)
* Add Thumbnail canvas that shows current viewport

* Thumbnail: highlight viewport and darken the rest instead of drawing rectangle. Thumbnail bigger. CSS shadow. Calculate thumbnail factor dynamically based on thumbnail-canvas size

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -80,6 +80,7 @@
                 <div class="button-separator"></div>
                 <div class="zoom-button" id="zoom-out" data-bind="click: canvas.zoomOut(canvas)"></div>
             </div>
+            <canvas id="thumbnail-canvas" width="150" height="150"></canvas>
         </div>
         <div class="tweets-pane" style="display:none" data-bind="visible: isTrendingTweetsEnabled && isTweetPaneExpanded">
             <div class="top-line">
